fix: decreased font-size of message metadata to not be cropped

--- a/src/main/resources/de/uniks/stpmon/team_m/styles.css
+++ b/src/main/resources/de/uniks/stpmon/team_m/styles.css
@@ -205,6 +205,12 @@
 .friendSettingsPopOver Button {
     -fx-background-color: #e8e8e8;
 }
+
+/*********************************************************************************/
+/********************************* Messages **************************************/
+.messageMetaData {
+    -fx-font-size: 14px;
+}
 /*********************************************************************************/
 /*********************************** Ingame *************************************/
 .settingsButton {
